
[project]
name = "Yui_GPT_CLI"
version = "0.1.0"
description = "AI CLI Tool"
authors = [
    {name = "Geoffery10", email = "powellgeoffery@gmail.com"},
    {name = "NonlinearFruit", email = "1123benji5813@gmail.com"},
    {name = "Yui-GPT", email = ""}
]
dependencies = [
    "termcolor>=2.3.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
run = "python -m main"
test = "pytest"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-asyncio>=0.21.0",
]
